--- a/01html/01tag/01/index.html
+++ b/01html/01tag/01/index.html
@@ -1,25 +1,103 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- meta:vp 입력 후 tab 하면 코드가 자동 생성됨 -->
+    <!-- 반응형 할 때 꼭 필요한 것  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>test</title>
+    
+    <!--body div : 자손 관계  -->
+    <!-- body > div : 자식 관계 -->
+    <style>
+        body div{
+            background-color: skyblue;
+            margin: 10px;
+        }
+        body > div{background-color: pink;}
+
+        h1{color:red}
+            .test1{background-color: skyblue;}
+            #test2{background-color: pink;}
+    </style>
 </head>
 <body>
+    <!-- css 우선 순위 -->
+    <!-- * < tag91) < class(10) < id(100) < inline < important -->
+    <h1 class="test1">test</h1>
+    <h1 id="test2" style="background-color:blue;">test2</h1>
+
+
+    <p></p>
+    <!-- 블록단위 요소 -> h1, h2 tag는 형제 관계 (자동 생성 방법 h1+h2 작성 후 tab) -->
+    <!-- body 와 h1, h2는 부모-자식 관계 -->
+    <!-- 1em = 16px but, body 크기에 따라 em 의 default 값은 달라질 수 있음  -->
+     <!--2em : 32px -->
     <h1>로고</h1>
+    <!-- 1.5em : 24px -->
     <h2>title</h2>
-    <p>Lorem, ipsum.</p>
-    <p>Lorem ipsum dolor sit.</p>
-    <p>Lorem ipsum</p>
-    <div>
+    <!-- h4는 기본 크기 -->
+    <h4>test</h4>
+    <!--  test / 기본 16px -->
+
+    <div style="width:100px">
+        <div>test</div>
+    <!-- 단락 구분 tag -->
+    <p>
+    <!-- Lorem 작성 후 tab -> mockup 단어 생성, 단어 갯수 지정 가능 -->
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    Consequatur quasi neque<span style="color:red"> dolor </span>reprehenderit sed explicabo ab rerum,
+    repudiandae eaque nobis quas quos expedita assumenda voluptas mollitia temporibus, sequi, rem nulla!
+    </p>
     </div>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <!-- 줄 형성  -->
+    <hr/> 
+    <div>
+    <!-- 공간 분할 tag -->
+    <!-- 삭제 단축키 (한줄 지우기) : shift+delete -->
+    <!-- 복붙 단축키 : shift + alt -->
+    <div> 
+    </div>
+    <div>
+    <!-- ul>li*10>{menu$} 실행 결과 -->
+    <!-- ul은 비순차 tag -> 순서 지정을 원할 시, ol tag 사용 -->
+    <ul> 
+        <li>menu2</li>
+        <li>menu3</li>
+        <ul>
+            <li><a href="#">menu1</a>
+                <ul class="submenu">
+                    <li><a href="#">sub1</a></li>
+                    <li><a href="#">sub2</a></li> 
+                    <li><a href="#">sub3</a></li>
+                    <li><a href="#">sub4</a></li> 
+                    <li><a href="#">sub5</a></li> 
+                </ul>
+            </li>
+        </ul>
+        <li>menu1</li>
+        <li>menu4</li>
+        <li>menu5</li>
+        <li>menu6</li>
+        <li>menu7</li>
+        <li>menu8</li>
+        <li>menu9</li>
+        <li>menu10</li>
     </ul>
+
+    <span>test</span>
+    <a href="#">test</a>
+    <img src="https://s.pstatic.net/shopping.phinf/20240822_19/d8fb6194-6ce3-47c3-abe6-c85b5a677477.jpg" alt=""/>
+
+    <!-- script 위치 -->
+    <script></script>
 </body>
 </html>
 
+<!-- 형제 관계 tag 생성 방법 html > head 후 tab (부모-자식 관계) -->
+
+<html>
+<head>
+    <meta>
+</head>
+</html>
